--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,17 @@ name = "fi-ethr-resolver"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
+base64 = "0.22.1"
+bs58 = "0.5.1"
+ethers = "2.0.14"
+fi-common = "0.0.7"
+hex = "0.4.3"
+phf = { version = "0.11.2", features = ["macros", "phf_macros"] }
+regex = "1.10.6"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+tokio = { version = "1.40.0", features = ["full"] }
