--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ crate-type = ["cdylib", "rlib"]
 base64 = "0.22.1"
 bs58 = "0.5.1"
 ethers = "2.0.14"
-fi-common = "0.0.7"
+fi-common = "0.0.8"
 hex = "0.4.3"
 phf = { version = "0.11.2", features = ["macros", "phf_macros"] }
 regex = "1.10.6"
+secp256k1 = "0.29.1"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
